@@ -1,3 +1,7 @@
+2000-02-09  Yoshiki Hayashi  <yoshiki@xemacs.org>
+
+	* Makefile (distclean): New target.
+
 2000-02-08  Yoshiki Hayashi  <yoshiki@xemacs.org>
 
 	* mime-view.el: Fix byte-compiler warnings.
